--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.svn
+**/wrk/Servers
+**/wrk/RemoteSystemsTempFiles
+**/wrk/.metadata
+**/wrk/*/target
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
