--- a/syst/REST/impl/wrk/data-importer/src/main/resources/application.properties
+++ b/syst/REST/impl/wrk/data-importer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/data_importer
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 
 
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
