--- a/syst/REST/impl/wrk/data-importer/pom.xml
+++ b/syst/REST/impl/wrk/data-importer/pom.xml
@@ -15,8 +15,13 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+	
     <dependencies>
+		<dependency>
+		  	<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.1</version>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
