--- a/syst/REST/impl/wrk/data-importer/pom.xml
+++ b/syst/REST/impl/wrk/data-importer/pom.xml
@@ -44,6 +44,16 @@
         	<artifactId>commons-net</artifactId>
         	<version>3.3</version>
         </dependency>
+         <dependency>
+        	<groupId>br.com.mais</groupId>
+        	<artifactId>etl</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
+         <dependency>
+        	<groupId>com.jcraft</groupId>
+        	<artifactId>jsch</artifactId>
+        	<version>0.1.53</version>
+        </dependency>
     </dependencies>
 
     <build>
