--- a/syst/REST/impl/wrk/data-importer/src/main/resources/application.properties
+++ b/syst/REST/impl/wrk/data-importer/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 ##Banco mysql servidor
-spring.datasource.url = jdbc:mysql://localhost:3306/data_importer
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.url = jdbc:mysql://localhost:3306/data_importer
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 ##Banco h2 embarcado
-#spring.datasource.url = jdbc:h2:file:~/data_importer
-#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url = jdbc:h2:file:~/data_importer
+spring.datasource.driverClassName=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
